Fixed Letter
Fixed animated letters overlap

--- a/css/grid.css
+++ b/css/grid.css
@@ -128,7 +128,7 @@
 }
 
 .unit-xs-1-4, .xs-1-4 {
-  width: 25.0000%;
+  width: 23.0000%;
 }
 
 .unit-offset-xs-1-4 {
